scss/partials/_menu.scss
div.menu {
  top: 56px;
  right: 14px !important;
  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2), 0 10px 25px 1px rgba(0, 0, 0, 0.1);
  border: 0px;
  border-radius: 5px;
  width: 240px;
  position: absolute;
  overflow: visible;
  padding: 24px;
  text-transform: none;
  background-color: white;

  &.dropdown-menu {
    letter-spacing: 0em;
  }

  div.menu-header {
    width: 100%;

    @include mobile() {
      display: none;
    }

    @include user-profile(32);

    div.user-avatar-img-container {
      float: left;
      margin-right: 16px;
    }

    div.user-name {
      @include avenir_H();
      font-size: 15px;
      color: $deep_navy;
      line-height: 18px;
    }

    div.user-type {
      color: $light_ui_grey;
      @include avenir_R();
      font-size: 13px;
    }
  }

  @include mobile() {
    position: relative;
    top: 0px;
    left: 0px;
    width: 100%;
    height: calc(100vh - 64px);
    border: none;
    border-top: 1px solid rgba(78,90,107,0.1);
    border-bottom: 1px solid rgba(78,90,107,0.1);
    box-shadow: none;
    transition: 230ms;
    display: block;
    text-align: right;
    background-color: white;
    display: none;
    opacity: 0;

    &.mobile-menu-open {
      display: block;
      opacity: 1;
    }
  }

  div.oc-menu-separator {
    width: calc(100% + 48px);
    height: 1px;
    background-color: rgba($deep_tan, 0.6);
    margin-left: -24px;
    margin-top: 20px;

    @include mobile() {
      display: none;
    }
  }

  a {
    display: block;
    background-color: transparent;
    padding: 0px;
    @include avenir_R();
    font-size: 14px;
    color: $deep_navy;
    text-align: left;

    @include mobile() {
      font-size: 21px;
    }

    &:hover {
      color: $carrot_green;
    }
  }

  div.org-item {
    padding: 24px 0px 3px 0px;

    @include mobile() {
      display: none;
    }

    div.org-avatar-border {
      border: 1px solid #D8DBDF;
      border-radius: 6px;
      padding: 6px;
      float: left;
      margin-right: 16px;
      width: 32px;
      height: 32px;

      div.org-avatar {
        @include org-avatar(20);
      }
    }

    div.org-name {
      @include avenir_H();
      font-size: 15px;
      color: $deep_navy;
      width: calc(100% - 48px);
      line-height: 18px;
      height: 18px;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    div.org-url {
      @include avenir_R();
      font-size: 13px;
      width: calc(100% - 48px);
      height: 15px;
      color: $light_ui_grey;
      overflow: hidden;
      text-overflow: ellipsis;
      line-height: 15px;
    }
  }

  a:hover {
    div.oc-menu-item {
      &.personal-profile {
        &:before {
          background-image: cdnUrl("/img/ML/menu_personal_profile_hover.svg");
        }
      }

      &.user-notifications {
        &:before {
          background-image: cdnUrl("/img/ML/menu_user_notifications_hover.svg");
        }
      }

      &.invite-people {
        &:before {
          background-image: cdnUrl("/img/ML/menu_invite_people_hover.svg");
        }
      }

      &.digest-settings {
        &:before {
          background-image: cdnUrl("/img/ML/menu_digest_settings_hover.svg");
        }
      }

      &.whats-new {
        &:before {
          background-image: cdnUrl("/img/ML/menu_whats_new_hover.svg");
        }
      }

      &.support {
        &:before {
          background-image: cdnUrl("/img/ML/menu_support_hover.svg");
        }
      }

      &.logout {
        &:before {
          background-image: cdnUrl("/img/ML/menu_logout_hover.svg");
        }
      }
    }
  }

  div.oc-menu-item {
    opacity: 0.9;
    padding: 14px 0px 0px 48px;
    position: relative;

    &.divider-item {
      box-shadow: inset 0 -1px 0 0 $carrot_dark_bg_gray;
    }

    &:before {
      content: "";
      position: absolute;
      background-size: 16px 16px;
      background-repeat: no-repeat;
      background-position: center;
      width: 16px;
      height: 16px;
      top: 15px;
      left: 8px;
    }

    &.personal-profile {
      @include preload_image(cdnUrl("/img/ML/menu_personal_profile_hover.svg"));
      &:before {
        background-image: cdnUrl("/img/ML/menu_personal_profile.svg");
      }
    }

    &.user-notifications {
      @include preload_image(cdnUrl("/img/ML/menu_user_notifications_hover.svg"));
      &:before {
        background-image: cdnUrl("/img/ML/menu_user_notifications.svg");
      }
    }

    &.invite-people {
      @include preload_image(cdnUrl("/img/ML/menu_invite_people_hover.svg"));
      &:before {
        background-image: cdnUrl("/img/ML/menu_invite_people.svg");
      }
    }

    &.digest-settings {
      @include preload_image(cdnUrl("/img/ML/menu_digest_settings_hover.svg"));
      &:before {
        background-image: cdnUrl("/img/ML/menu_digest_settings.svg");
      }
    }

    &.whats-new {
      @include preload_image(cdnUrl("/img/ML/menu_whats_new_hover.svg"));
      &:before {
        background-image: cdnUrl("/img/ML/menu_whats_new.svg");
      }
    }

    &.support {
      @include preload_image(cdnUrl("/img/ML/menu_support_hover.svg"));
      &:before {
        background-image: cdnUrl("/img/ML/menu_support.svg");
      }
    }

    &.logout {
      @include preload_image(cdnUrl("/img/ML/menu_logout_hover.svg"));
      &:before {
        background-image: cdnUrl("/img/ML/menu_logout.svg");
      }
    }
  }
}

