Fix menu icon alignment on mobile.

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -205,6 +205,10 @@ div.menu {
       height: 16px;
       top: 15px;
       left: 8px;
+
+      @include mobile() {
+        top: 20px;
+      }
     }
 
     &.personal-profile {
